@@ -19,7 +19,6 @@
 #include "bsesequencer.h"
 
 #include <bse/bseengine.h>
-#include <bse/gslieee754.h>
 
 
 enum {
