@@ -33,7 +33,7 @@
 #include "davxtalstrings.h"
 
 #include <bse/bseengine.h>
-#include <bse/gslsignal.h>
+#include <bse/bsemathsignal.h>
 
 #include <string.h>
 
@@ -336,9 +336,9 @@ xmod_process (BseModule *module,
   for (i = 0; i < n_values; i++)
     {
       /* check input triggers */
-      if (G_UNLIKELY (GSL_SIGNAL_RAISING_EDGE (last_trigger_level, trigger_in[i])))
+      if (G_UNLIKELY (BSE_SIGNAL_RAISING_EDGE (last_trigger_level, trigger_in[i])))
       	{
-	  xmod_trigger (xmod, freq_in ? GSL_SIGNAL_TO_FREQ (freq_in[i]) : xmod->tparams.freq);
+	  xmod_trigger (xmod, freq_in ? BSE_SIGNAL_TO_FREQ (freq_in[i]) : xmod->tparams.freq);
 	  real_freq_256 = (int) (xmod->last_trigger_freq * 256);
 	  actual_freq_256 = (int) (BSE_MIX_FREQ_f * 256 / xmod->size);
 	}
